[package]
description = "Action implementations and context functions"
edition = "2024"
license = { workspace = true }
name = "kuro_action_impl"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
dupe = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
relative-path = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
tracing = { workspace = true }

allocative = { workspace = true }
dice = { workspace = true }
gazebo = { workspace = true }
sorted_vector_map = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }

kuro_action_metadata_proto = { workspace = true }
kuro_analysis = { workspace = true }
kuro_artifact = { workspace = true }
kuro_build_api = { workspace = true }
kuro_build_signals = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_directory = { workspace = true }
kuro_error = { workspace = true }
kuro_events = { workspace = true }
kuro_execute = { workspace = true }
kuro_file_watcher = { workspace = true }
kuro_fs = { workspace = true }
kuro_http = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_node = { workspace = true }
kuro_util = { workspace = true }
dice_futures = { workspace = true }
host_sharing = { workspace = true }
remote_execution = { workspace = true }
