[package]
description = "Execute rule function"
edition = "2024"
license = { workspace = true }
name = "kuro_analysis"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
smallvec = { workspace = true }

allocative = { workspace = true }
cmp_any = { workspace = true }
dice = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }
indexmap = { workspace = true }
sorted_vector_map = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }

kuro_artifact = { workspace = true }
kuro_fs = { workspace = true }
kuro_build_api = { workspace = true }
kuro_build_signals = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_events = { workspace = true }
kuro_execute = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_interpreter_for_build = { workspace = true }
kuro_node = { workspace = true }
kuro_query = { workspace = true }
kuro_util = { workspace = true }
