[package]
description = "Anonymous targets"
edition = "2024"
license = { workspace = true }
name = "kuro_anon_target"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

allocative = { workspace = true }
cmp_any = { workspace = true }
dice = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }
strong_hash = { workspace = true }

kuro_analysis = { workspace = true }
kuro_artifact = { workspace = true }
kuro_build_api = { workspace = true }
kuro_configured = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_events = { workspace = true }
kuro_execute = { workspace = true }
kuro_fs = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_interpreter_for_build = { workspace = true }
kuro_node = { workspace = true }
kuro_util = { workspace = true }
dice_futures = { workspace = true }
