[package]
description = "Artifact types"
edition = "2024"
license = { workspace = true }
name = "kuro_artifact"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
derivative = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
serde = { workspace = true }
static_assertions = { workspace = true }
take_mut = { workspace = true }

allocative = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }
strong_hash = { workspace = true }

kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_execute = { workspace = true }
kuro_fs = { workspace = true }
kuro_util = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
serde_json = { workspace = true }
