[package]
description = "Build related interpreter defs, coercion logic, some build rule impelementations, and handing actions off to DICE for caching and execution. A large chunk of the 'build' part of BuckV2"
edition = "2024"
license = { workspace = true }
name = "kuro_build_api"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
console = { workspace = true }
dashmap = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true }
internment = { workspace = true }
inventory = { workspace = true }
itertools = { workspace = true }
linkme = { workspace = true }
multimap = { workspace = true }
once_cell = { workspace = true }
probminhash = { workspace = true }
ref-cast = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
strong_hash = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

allocative = { workspace = true }
dice = { workspace = true }
display_container = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }
pagable = { workspace = true }
remote_execution = { workspace = true }
rustls = { workspace = true }
setsketch = { workspace = true }
sorted_vector_map = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }

kuro_artifact = { workspace = true }
kuro_build_api_derive = { workspace = true }
kuro_build_info = { workspace = true }
kuro_build_signals = { workspace = true }
kuro_cli_proto = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_directory = { workspace = true }
kuro_error = { workspace = true }
kuro_errorformat = { workspace = true }
kuro_event_observer = { workspace = true }
kuro_events = { workspace = true }
kuro_execute = { workspace = true }
kuro_file_watcher = { workspace = true }
kuro_fs = { workspace = true }
kuro_http = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_node = { workspace = true }
kuro_query = { workspace = true }
kuro_test_api = { workspace = true }
kuro_util = { workspace = true }
kuro_wrapper_common = { workspace = true }
dice_futures = { workspace = true }

[dev-dependencies]
kuro_certs = { workspace = true }
kuro_wrapper_common = { workspace = true }
