[package]
description = "Tests for kuro_build_api crate"
edition = "2024"
license = { workspace = true }
name = "kuro_build_api_tests"
repository = { workspace = true }
version = "0.1.0"

[dev-dependencies]
assert_matches = { workspace = true }
async-trait = { workspace = true }
ctor = { workspace = true }
derivative = { workspace = true }
fxhash = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
maplit = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

sorted_vector_map = { workspace = true }

allocative = { workspace = true }
dice = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }
itertools = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }

kuro_action_impl = { workspace = true }
kuro_analysis = { workspace = true }
kuro_anon_target = { workspace = true }
kuro_artifact = { workspace = true }
kuro_build_api = { workspace = true }
kuro_build_signals = { workspace = true }
kuro_certs = { workspace = true }
kuro_common = { workspace = true }
kuro_configured = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_directory = { workspace = true }
kuro_error = { workspace = true }
kuro_events = { workspace = true }
kuro_execute = { workspace = true }
kuro_file_watcher = { workspace = true }
kuro_fs = { workspace = true }
kuro_http = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_interpreter_for_build = { workspace = true }
kuro_node = { workspace = true }
kuro_transition = { workspace = true }
kuro_util = { workspace = true }
