[package]
authors = ["Meta"]
description = "Capture build signals during a build to produce a critical path"
edition = "2024"
license = { workspace = true }
name = "kuro_build_signals_impl"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
kuro_analysis = { workspace = true }
kuro_artifact = { workspace = true }
kuro_build_api = { workspace = true }
kuro_build_signals = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_critical_path = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_events = { workspace = true }
kuro_interpreter_for_build = { workspace = true }
kuro_node = { workspace = true }
kuro_util = { workspace = true }
dice = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }
itertools = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
