[package]
description = "Buck V2 extension language"
edition = "2024"
license = { workspace = true }
name = "kuro_bxl"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
allocative = { workspace = true }
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
kuro_events = { workspace = true }
clap = { workspace = true }
cmp_any = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
dice = { workspace = true }
display_container = { workspace = true }
dupe = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
gazebo = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starlark = { workspace = true }
starlark_map = { workspace = true }
strong_hash = { workspace = true }
tokio = { workspace = true }

kuro_action_impl = { workspace = true }
kuro_analysis = { workspace = true }
kuro_artifact = { workspace = true }
kuro_build_api = { workspace = true }
kuro_cli_proto = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_execute = { workspace = true }
kuro_fs = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_interpreter_for_build = { workspace = true }
kuro_node = { workspace = true }
kuro_profile = { workspace = true }
kuro_query = { workspace = true }
kuro_query_parser = { workspace = true }
kuro_server_ctx = { workspace = true }
kuro_util = { workspace = true }
dice_futures = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
maplit = { workspace = true }
