[package]
edition = "2024"
license = { workspace = true }
name = "kuro_certs"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
x509-parser = { workspace = true }

dupe = { workspace = true }

kuro_error = { workspace = true }
kuro_util = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fbcode_build)"] }
