[package]
description = "Implementation of configuration constructor for modifier feature"
edition = "2024"
license = { workspace = true }
name = "kuro_cfg_constructor"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
allocative = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
dice = { workspace = true }
dupe = { workspace = true }
futures = { workspace = true }
starlark = { workspace = true }

kuro_build_api = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_error = { workspace = true }
kuro_events = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_interpreter_for_build = { workspace = true }
kuro_node = { workspace = true }
dice_futures = { workspace = true }
