[package]
name = "kuro_cli_proto"

edition = "2024"
license = { workspace = true }
repository = { workspace = true }
version = "0.1.0"

[dependencies]
allocative = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }

kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_fs = { workspace = true }
kuro_subscription_proto = { workspace = true }

[build-dependencies]
kuro_protoc_dev = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true }
