[package]
description = "Some parts of Buck client"
edition = "2024"
license = { workspace = true }
name = "kuro_client"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dupe = { workspace = true }
futures = { workspace = true }
gazebo = { workspace = true }
humantime = { workspace = true }
libc = { workspace = true }
lsp-server = { workspace = true }
maplit = { workspace = true }
multimap = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
superconsole = { version = "0.2.0", path = "../../superconsole" }
threadpool = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

# Please do not add dependency on `kuro_build_api`.
kuro_cli_proto = { workspace = true }
kuro_client_ctx = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_event_log = { workspace = true }
kuro_fs = { workspace = true }
kuro_query_parser = { workspace = true }
kuro_subscription_proto = { workspace = true }
kuro_util = { workspace = true }
kuro_wrapper_common = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = { workspace = true }
