[package]
description = "Code supporting kuro client commands"
edition = "2024"
license = { workspace = true }
name = "kuro_client_ctx"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
allocative = { workspace = true }
async-compression = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
crossterm = { workspace = true }
csv = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
dirs = { workspace = true }
dupe = { workspace = true }
fbinit = { workspace = true }
fs4 = { workspace = true }
futures = { workspace = true }
gazebo = { workspace = true }
hex = { workspace = true }
httparse = { workspace = true }
humantime = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
object = { workspace = true }
once_cell = { workspace = true }
pin-project = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
strum = { workspace = true }
sysinfo = { workspace = true }
take_mut = { workspace = true }
termwiz = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

superconsole = { version = "0.2.0", path = "../../superconsole" }

# Please do not add dependency on `kuro_build_api`.
kuro_build_info = { workspace = true }
kuro_cli_proto = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_event_log = { workspace = true }
kuro_event_observer = { workspace = true }
kuro_events = { workspace = true }
kuro_fs = { workspace = true }
kuro_health_check = { workspace = true }
kuro_resource_control = { workspace = true }
kuro_util = { workspace = true }
kuro_wrapper_common = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
termios = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
indoc = { workspace = true }
lsp-server = { workspace = true }
maplit = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fbcode_build)"] }
