[package]
description = "Client side of `kuro audit`"
edition = "2024"
license = { workspace = true }
name = "kuro_cmd_audit_client"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

dupe = { workspace = true }

kuro_cli_proto = { workspace = true }
kuro_client_ctx = { workspace = true }
