[package]
description = "Server side of `kuro audit`"
edition = "2024"
license = { workspace = true }
name = "kuro_cmd_audit_server"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
indent_write = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
ref-cast = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starlark_map = { workspace = true }

dice = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }

kuro_analysis = { workspace = true }
kuro_build_api = { workspace = true }
kuro_cli_proto = { workspace = true }
kuro_client_ctx = { workspace = true }
kuro_cmd_audit_client = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_events = { workspace = true }
kuro_execute = { workspace = true }
kuro_fs = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_node = { workspace = true }
kuro_query = { workspace = true }
kuro_server_ctx = { workspace = true }
kuro_util = { workspace = true }
