[package]
description = "`kuro completion` command client implementation"
edition = "2024"
license = { workspace = true }
name = "kuro_cmd_completion_client"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

kuro_cli_proto = { workspace = true }
kuro_client_ctx = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_error = { workspace = true }
kuro_fs = { workspace = true }

[dev-dependencies]
paste = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(buck_build)"] }
