[package]
description = "`kuro debug` command client implementation"
edition = "2024"
license = { workspace = true }
name = "kuro_cmd_debug_client"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }

allocative = { workspace = true }
kuro_cli_proto = { workspace = true }
kuro_client_ctx = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_event_log = { workspace = true }
kuro_event_observer = { workspace = true }
kuro_events = { workspace = true }
kuro_fs = { workspace = true }
kuro_offline_archive = { workspace = true }
kuro_wrapper_common = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(buck_build)"] }
