[package]
description = "`kuro docs` command server implementation"
edition = "2024"
license = { workspace = true }
name = "kuro_cmd_docs_server"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
dice = { workspace = true }
dupe = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starlark = { workspace = true }

kuro_cli_proto = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_events = { workspace = true }
kuro_fs = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_interpreter_for_build = { workspace = true }
kuro_server_ctx = { workspace = true }
