[package]
description = "`kuro log` command client implementation"
edition = "2024"
license = { workspace = true }
name = "kuro_cmd_log_client"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
csv = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
linked-hash-map = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

kuro_cli_proto = { workspace = true }
kuro_client_ctx = { workspace = true }
kuro_common = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_event_log = { workspace = true }
kuro_event_observer = { workspace = true }
kuro_events = { workspace = true }
kuro_util = { workspace = true }
kuro_wrapper_common = { workspace = true }
dupe = { workspace = true }

superconsole = { version = "0.2.0", path = "../../superconsole" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(buck_build)"] }
