[package]
description = "Query server commands for Kuro"
edition = "2024"
license = { workspace = true }
name = "kuro_cmd_query_server"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
indent_write = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

dice = { workspace = true }
dupe = { workspace = true }
gazebo = { workspace = true }
starlark_map = { workspace = true }

kuro_build_api = { workspace = true }
kuro_cli_proto = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_events = { workspace = true }
kuro_fs = { workspace = true }
kuro_interpreter = { workspace = true }
kuro_node = { workspace = true }
kuro_profile = { workspace = true }
kuro_query = { workspace = true }
kuro_server_ctx = { workspace = true }
kuro_util = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fbcode_build)"] }
