[package]
description = "`kuro rage` command client implementation"
edition = "2024"
license = { workspace = true }
name = "kuro_cmd_rage_client"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
dupe = { workspace = true }
futures = { workspace = true }
humantime = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Kuro dependencies
kuro_cli_proto = { workspace = true }
kuro_client_ctx = { workspace = true }
kuro_cmd_audit_client = { workspace = true }
kuro_common = { workspace = true }
kuro_core = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_event_log = { workspace = true }
kuro_events = { workspace = true }
kuro_fs = { workspace = true }
kuro_util = { workspace = true }
kuro_wrapper_common = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(buck_build)"] }
