[package]
description = "`kuro starlark` command client implementation"
edition = "2024"
license = { workspace = true }
name = "kuro_cmd_starlark_client"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
debugserver-types = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

kuro_cli_proto = { workspace = true }
kuro_client_ctx = { workspace = true }
kuro_common = { workspace = true }
kuro_data = { workspace = true }
kuro_error = { workspace = true }
kuro_event_observer = { workspace = true }
kuro_events = { workspace = true }
